# SolarWindPy

./: .buildinfo  .gitignore  .gitmessage  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CITATION.rst  CLAUDE.md  CNAME  CONTRIBUTING.md  DEPLOYMENT_PLAN_SEMVER_PYPI_RTD.md  LICENSE  LICENSE.rst  MANIFEST.in  PYTHON-310-MIGRATION-NOTES.md  README.md  README.rst  RELEASE_NOTES_PYTHON_310.md  SOLAR_ACTIVITY_IMPLEMENTATION_SUMMARY.md  agent-consolidation-value-proposition.tmp.md  api_reference.html  baseline-coverage.json  circular_import_audit_summary.md  claude_session_state.md  codex-AGENTS.md  contributor_documentation_guidelines.md  coverage-monitor-fix.md  coverage.json  create_conda_env.sh  doctest_guidelines.md  documentation_review.html  fix_d205_docstrings.py  genindex.html  import_analysis_report.txt  index.html  installation.html  modules.html  (+49 more)
.claude/: CLAUDE.md  CLAUDE.md.backup  README.md  WORKFLOW_TEMPLATE.md  agent-routing.json  agents.md  agents.md.backup  anthropic-application.md  compacted_state.md  compacted_state.md.orig  ecosystem-documentation.md  emergency-rollback.json  settings.json  settings.local.json  statusline.py  statusline.sh  validation-monitoring.json  workflow-automation.json
.github/: PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md  dependabot.yml
ClaudeCodeFiles/: CLAUDE.md  WORKFLOWS.md  agent-performance-optimizer.md  agents-index.md
Files-From-Alex-Claude-Ignores-This-Directory/: AGENTS-claude.md  agent-dataframe-architect.md  agent-documentation-maintainer.md  agent-numerical-stability-guard.md  agent-test-engineer.md
_autosummary/: solarwindpy.Hist1D.html  solarwindpy.Hist2D.html  solarwindpy.Plasma.html  solarwindpy.TeXlabel.html  solarwindpy.core.alfvenic_turbulence.AlfvenicTurbulence.html  solarwindpy.core.alfvenic_turbulence.AlvenicTurbAveraging.html  solarwindpy.core.alfvenic_turbulence.html  solarwindpy.core.base.Base.html  solarwindpy.core.base.Core.html  solarwindpy.core.base.html  solarwindpy.core.ions.Ion.html  solarwindpy.core.ions.html  solarwindpy.core.plasma.Plasma.html  solarwindpy.core.plasma.html  solarwindpy.core.spacecraft.Spacecraft.html  solarwindpy.core.spacecraft.html  solarwindpy.core.tensor.Tensor.html  solarwindpy.core.tensor.html  solarwindpy.core.units_constants.Constants.html  solarwindpy.core.units_constants.Units.html  solarwindpy.core.units_constants.html  solarwindpy.core.vector.BField.html  solarwindpy.core.vector.Vector.html  solarwindpy.core.vector.html  solarwindpy.fitfunctions.core.ChisqPerDegreeOfFreedom.html  solarwindpy.fitfunctions.core.FitBounds.html  solarwindpy.fitfunctions.core.FitFailedError.html  solarwindpy.fitfunctions.core.FitFunction.html  solarwindpy.fitfunctions.core.FitFunctionError.html  solarwindpy.fitfunctions.core.FitFunctionMeta.html  solarwindpy.fitfunctions.core.InitialGuessInfo.html  solarwindpy.fitfunctions.core.InsufficientDataError.html  solarwindpy.fitfunctions.core.InvalidParameterError.html  solarwindpy.fitfunctions.core.Observations.html  solarwindpy.fitfunctions.core.UsedRawObs.html  solarwindpy.fitfunctions.core.html  solarwindpy.fitfunctions.exponentials.Exponential.html  solarwindpy.fitfunctions.exponentials.ExponentialCDF.html  solarwindpy.fitfunctions.exponentials.ExponentialPlusC.html  solarwindpy.fitfunctions.exponentials.html  (+71 more)
_modules/: index.html
_sources/: api_reference.rst.txt  index.rst.txt  installation.rst.txt  solarwindpy.plans.rst.txt  solarwindpy.rst.txt  solarwindpy.solar_activity.lisird.rst.txt  solarwindpy.solar_activity.rst.txt  solarwindpy.solar_activity.sunspot_number.rst.txt
_static/: documentation_options.js
api/: modules.html  solarwindpy.core.abundances.html  solarwindpy.core.alfvenic_turbulence.html  solarwindpy.core.base.html  solarwindpy.core.html  solarwindpy.core.ions.html  solarwindpy.core.plasma.html  solarwindpy.core.spacecraft.html  solarwindpy.core.tensor.html  solarwindpy.core.units_constants.html  solarwindpy.core.vector.html  solarwindpy.data.html  solarwindpy.data.reference.html  solarwindpy.fitfunctions.composite.html  solarwindpy.fitfunctions.core.html  solarwindpy.fitfunctions.exponentials.html  solarwindpy.fitfunctions.gaussians.html  solarwindpy.fitfunctions.heaviside.html  solarwindpy.fitfunctions.hinge.html  solarwindpy.fitfunctions.html  solarwindpy.fitfunctions.lines.html  solarwindpy.fitfunctions.moyal.html  solarwindpy.fitfunctions.plots.html  solarwindpy.fitfunctions.power_laws.html  solarwindpy.fitfunctions.tex_info.html  solarwindpy.fitfunctions.trend_fits.html  solarwindpy.html  solarwindpy.instabilities.beta_ani.html  solarwindpy.instabilities.html  solarwindpy.instabilities.verscharen2016.html  solarwindpy.plotting.agg_plot.html  solarwindpy.plotting.base.html  solarwindpy.plotting.hist1d.html  solarwindpy.plotting.hist2d.html  solarwindpy.plotting.histograms.html  solarwindpy.plotting.html  solarwindpy.plotting.labels.base.html  solarwindpy.plotting.labels.chemistry.html  solarwindpy.plotting.labels.composition.html  solarwindpy.plotting.labels.datetime.html  (+21 more)
benchmarks/: fitfunctions_performance.py
codex-config/: custom_instructions.md
conda-recipe/: meta.yaml
custom-chatGPT/: custom-gpt-instructions.md  solarwindpy-best-practices-checklist.md  solarwindpy-prompt-template.md
docs/: BUILD_FAILURE_RESOLUTION.md  DEPLOYMENT_STATUS.md  MIGRATION-DEPENDENCY-OVERHAUL.md  Makefile  README.md  READTHEDOCS_SETUP.md  RELEASE_PROCESS.md  TEMPLATE_SYSTEM.md  VALIDATION_REPORT.md  add_no_index.py  conda-feedstock-automation.md  make.bat  requirements.txt  (+1 more)
solarwindpy/solar_activity/sunspot_number/: README.md  __init__.py  base.py  setup.cfg  setup.py  sidc.py  ssn_extrema.csv  ssn_extrema.csv.silso
solarwindpy/solar_activity/sunspot_number/data/lisird/CaK/: 20190519.json
solarwindpy/solar_activity/sunspot_number/data/lisird/Lalpha/: 20190519.csv
solarwindpy/solar_activity/sunspot_number/data/lisird/MgII/: 20190519.json
solarwindpy/solar_activity/sunspot_number/data/sidc/m13/: 20190519.csv
solarwindpy/solar_activity/sunspot_number/lisird/: lisird.py
(+1149 files in other folders)
