[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.eggs
  | \.travis.yml
  | \.
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Only consider v* tags for versioning (exclude compaction tags)
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+.*)$"
# Use git describe with version tags only
git_describe_command = "git describe --dirty --tags --long --match 'v*'"

[project]
name = "solarwindpy"
description = "Python package for solar wind data analysis."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = {file = "LICENSE.rst"}
authors = [
  {name = "B. L. Alterman", email = "blaltermanphd@gmail.com"}
]
dynamic = ["version"]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "numexpr",
  "bottleneck",
  "h5py",
  "pyyaml",
  "matplotlib",
  "astropy",
  "numba",
  "tabulate",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
  "plasma",
  "physics",
  "solar wind",
  "measurements",
  "in situ",
  "spacecraft",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "black",
    "flake8",
    "doc8",
    "flake8-docstrings",
    "pydocstyle",
    "numpydoc",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-spelling",
    "sphinxcontrib-bibtex",
]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/blalterman/SolarWindPy/issues"
"Source" = "https://github.com/blalterman/SolarWindPy"
