[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.eggs
  | \.travis.yml
  | \.
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Only consider v* tags for versioning (exclude compaction tags)
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+.*)$"
# Use git describe with version tags only
git_describe_command = "git describe --dirty --tags --long --match 'v*'"

[project]
name = "solarwindpy"
description = "Python package for solar wind data analysis."
readme = "README.rst"
requires-python = ">=3.11,<4"
license = {file = "LICENSE"}
authors = [
  {name = "B. L. Alterman", email = "blaltermanphd@gmail.com"}
]
dynamic = ["version"]
dependencies = [
  "numpy>=1.22,<2.0",  # Required by contourpy (matplotlib's contour engine)
  "scipy>=1.10",
  "pandas>=1.5",
  "numexpr>=2.8",
  "bottleneck>=1.3",
  "h5py>=3.8",
  "pyyaml>=6.0",
  "matplotlib>=3.5",   # Uses contourpy for contour plots
  "astropy>=5.0",
  "numba>=0.57",       # Works with numpy <2.0
  "tabulate>=0.9",
  "docstring-inheritance>=2.0",  # For automatic docstring merging in fit functions
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
  "plasma",
  "physics",
  "solar wind",
  "measurements",
  "in situ",
  "spacecraft",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "black",
    "flake8",
    "doc8",
    "flake8-docstrings",
    "pydocstyle",
    "numpydoc",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-spelling",
    "sphinxcontrib-bibtex",
    "docstring-inheritance>=2.0",
]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/blalterman/SolarWindPy/issues"
"Source" = "https://github.com/blalterman/SolarWindPy"
