[options]
packages = find:
include_package_data = True

tests_require =
    pytest
    black
    flake8


[flake8]
add = D402, D413, D205, D406
ignore = E501, W503, D202, D302, D400
max-line-length = 88
max-complexity = 18
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist
# select = B,C,E,F,W,T4,B9

[bdist_wheel]
universal=0
