[options]
packages = find:
include_package_data = True

tests_require =
    pytest
    black
    flake8


[flake8]
extend-select = D402, D413, D205, D406
ignore = E501, W503, D100, D101, D102, D103, D104, D105, D200, D202, D209, D214, D215, D300, D302, D400, D401, D403, D404, D405, D409, D412, D414
docstring-convention = numpy
max-line-length = 88
max-complexity = 18
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist
# select = B,C,E,F,W,T4,B9

[bdist_wheel]
universal=0
