[metadata]
name = solar_activity
description = Data loaders for various missions.
long_description = file: README.rst
author = "B. L. Alterman"
author_email = "balterma@umich.edu"
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/blalterman/solar_activity
project_urls =
    bug_reports = https://github.com/blalterman/solar_activity/issues
    source = https://github.com/blalterman/solar_activity
edit_on_github = True
classifiers =
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Stuff :: Stuff",
    "License :: OSI Approved :: BSD-3-Clause",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering"
    "Topic :: Scientific/Engineering :: Physics"
keywords =
    plasma
    physics
    "sunspot number"

[options]
setup_requires =
    setuptools_scm # Get version from git tags with appropriate solarwindpy/__init__.py code.
packages = find:
python_requires = ">=3.7, <4",

# For a comparison of `install_requires` and `requirements.txt`, see
# https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
    numpy
    pandas
    scipy
    black
    flake8

[flake8]
add = D402, D413, W293
ignore = E501, W503, D202, D205, D302, D400
max-line-length = 88
max-complexity = 18
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist

[bdist_wheel]
universal=0
